@@ -1,5 +1,5 @@
 4.0.0
-    2017-07-16
+    2017-07-18
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * TASK #99: remove support for php versions 5.4 and 5.5
@@ -7,6 +7,7 @@
     * TASK #101: remove TYPO3 6.2 compatibility
     * TASK #92: add currency translation and tax recalculation
     * TASK #122: add functional tests for parsing taxClass from TypoScript
+    * TASK #123: add zones for shipping method configuration
 
 3.12.4
     2017-07-18
